Update fficxx to support GHC 9.4 (#15)
* update HROOT as fficxx changed. ROOT build for macosx on aarch64
* generate HROOT-src packages correctly
* a little nix refactoring. nixpkgs update (support ghc 9.4)
* DotGraph analysis.
* unify DepGraph into HROOT-generate. ormolu format
* remove stale nix code

--- a/workspace/cabal.project
+++ b/workspace/cabal.project
@@ -1,16 +1,15 @@
-
 optional-packages:
-          ../fficxx/fficxx/fficxx.cabal
-          ../fficxx/fficxx-runtime/fficxx-runtime.cabal
+          ../fficxx/fficxx
+          ../fficxx/fficxx-runtime
           stdcxx/
           ../HROOT-generate/        
           HROOT-core/
           HROOT-graf/
           HROOT-hist/
           HROOT-io/
-	  HROOT-math/
-	  HROOT-net/
-	  HROOT-tree/
-	  HROOT-RooFit/
-	  HROOT-RooFit-RooStats/
+          HROOT-math/
+          HROOT-net/
+          HROOT-tree/
+          HROOT-RooFit/
+          HROOT-RooFit-RooStats/
           HROOT/
