--- a/HROOT-generate/HROOT-generate.cabal
+++ b/HROOT-generate/HROOT-generate.cabal
@@ -1,68 +1,30 @@
+Cabal-Version:  3.0
 Name:		HROOT-generate
 Version:	0.10.0.1
 Synopsis:	automatic HROOT binding generation
 Description: 	automatic HROOT binding generation
-License:        LGPL-2.1
+License:        LGPL-2.1-or-later
 License-file:	LICENSE
 Author:		Ian-Woo Kim
 Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
 Build-Type: 	Simple
-Cabal-Version:  >= 1.8
 Data-files:
-                template/HROOT-core/CHANGES
-                template/HROOT-core/Config.hs
-                template/HROOT-core/LICENSE
-                template/HROOT-core/Setup.lhs
-                template/HROOT-hist/CHANGES
-                template/HROOT-hist/Config.hs
-                template/HROOT-hist/LICENSE
-                template/HROOT-hist/Setup.lhs
-                template/HROOT-graf/CHANGES
-                template/HROOT-graf/Config.hs
-                template/HROOT-graf/LICENSE
-                template/HROOT-graf/Setup.lhs
-                template/HROOT-io/CHANGES
-                template/HROOT-io/Config.hs
-                template/HROOT-io/LICENSE
-                template/HROOT-io/Setup.lhs
-                template/HROOT-math/CHANGES
-                template/HROOT-math/Config.hs
-                template/HROOT-math/LICENSE
-                template/HROOT-math/Setup.lhs
-                template/HROOT-net/CHANGES
-                template/HROOT-net/Config.hs
-                template/HROOT-net/LICENSE
-                template/HROOT-net/Setup.lhs
-                template/HROOT-RooFit/CHANGES
-                template/HROOT-RooFit/Config.hs
-                template/HROOT-RooFit/LICENSE
-                template/HROOT-RooFit/Setup.lhs
-                template/HROOT-RooFit-RooStats/CHANGES
-                template/HROOT-RooFit-RooStats/Config.hs
-                template/HROOT-RooFit-RooStats/LICENSE
-                template/HROOT-RooFit-RooStats/Setup.lhs
-                template/HROOT-tree/CHANGES
-                template/HROOT-tree/Config.hs
-                template/HROOT-tree/LICENSE
-                template/HROOT-tree/Setup.lhs
-                template/HROOT/CHANGES
-                template/HROOT/Config.hs
-                template/HROOT/LICENSE
-                template/HROOT/README.md
-                template/HROOT/Setup.lhs
-                template/HROOT/example/*.hs
+                template/common/CHANGES
+                template/common/Config.hs
+                template/common/LICENSE
+                template/common/Setup.hs
+                template/common/README.md
 
 Library
-  hs-source-dirs: lib
+  hs-source-dirs: src
   ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
-  ghc-prof-options: -fprof-cafs -fprof-auto
   Build-Depends: base>4,
                  Cabal,
                  cmdargs,
                  containers,
                  directory,
-                 fficxx >= 0.6,
-                 fficxx-runtime >= 0.6,
+                 fficxx >= 0.7,
+                 fficxx-runtime >= 0.7,
                  filepath>1,
                  haskell-src-exts,
                  mtl>2,
@@ -88,7 +50,7 @@ Library
 
 Executable HROOT-generate
   Main-is: HROOT-generate.hs
-  hs-source-dirs: exe
+  hs-source-dirs: app
   ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
   Build-Depends: array,
                  base>4,
